test_regress/t/t_event_copy.out
%Error-UNSUPPORTED: t/t_event_copy.v:98:10: Assignment to and from event in statically scheduled context.
                                          : ... note: In instance 't'
                                          : Static event scheduling won't be able to handle this.
                                          : ... Suggest move the event into a completely dynamic context, eg. a class,  and reference it only from such context.
   98 |       e4 = e3;   
      |          ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_event_copy.v:99:10: Assignment to and from event in statically scheduled context.
                                          : ... note: In instance 't'
                                          : Static event scheduling won't be able to handle this.
                                          : ... Suggest move the event into a completely dynamic context, eg. a class,  and reference it only from such context.
   99 |       e3 = e2;   
      |          ^
%Error-UNSUPPORTED: t/t_event_copy.v:126:10: Assignment to event in statically scheduled context.
                                           : ... note: In instance 't'
                                           : Static event scheduling won't be able to handle this.
                                           : ... Suggest move the event into a completely dynamic context, eg. a class,  and reference it only from such context.
  126 |       e3 = null;
      |          ^
%Error: Exiting due to
